[gd_scene load_steps=10 format=2]

[ext_resource path="res://reward_area/reward_card/reward_card.tscn" type="PackedScene" id=1]
[ext_resource path="res://reward_area/reward_area.gd" type="Script" id=2]
[ext_resource path="res://reward_area/reward_area_frame.png" type="Texture" id=3]
[ext_resource path="res://card/resources/green_card.tres" type="Resource" id=4]
[ext_resource path="res://card/resources/red_card.tres" type="Resource" id=5]
[ext_resource path="res://card/resources/blue_card.tres" type="Resource" id=6]
[ext_resource path="res://card/resources/grey_card.tres" type="Resource" id=7]
[ext_resource path="res://turn_manager/turn_manager.tres" type="Resource" id=8]
[ext_resource path="res://card/resources/purple_card.tres" type="Resource" id=9]

[node name="RewardArea" type="Node2D"]
script = ExtResource( 2 )
turn_manager_resource = ExtResource( 8 )
cards = [ ExtResource( 7 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 9 ) ]

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 384.0
margin_bottom = 256.0

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer"]
margin_right = 384.0
margin_bottom = 256.0
texture = ExtResource( 3 )
draw_center = false
region_rect = Rect2( 0, 0, 88, 88 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 384.0
margin_bottom = 256.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 76.0
margin_top = 80.0
margin_right = 308.0
margin_bottom = 176.0
custom_constants/separation = 20
alignment = 1

[node name="RewardSlot1" parent="MarginContainer/CenterContainer/HBoxContainer" instance=ExtResource( 1 )]

[node name="RewardSlot2" parent="MarginContainer/CenterContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 84.0
margin_right = 148.0
card_resource = ExtResource( 6 )

[node name="RewardSlot3" parent="MarginContainer/CenterContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 168.0
margin_right = 232.0
card_resource = ExtResource( 5 )
